--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://1.bp.blogspot.com/-0VRrd81JXlA/YHk84zcrXrI/AAAAAAAAAI4/9enPRlUODWcEXBMjNwHpoAzvdQd__CyDwCLcBGAsYHQ/s1280/IMG-20210414-WA0013%2B%25281%2529.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Zomato Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
